@@ -2,6 +2,18 @@
  *
  */
 
+2009-03-03 09:26 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
+  * include/wxh.h
+  * samples/arrbrowser/arrbrowser.prg
+  * src/common/wx_harbour.cpp
+  * src/hrbcompat/tbrowse/wx_browse.cpp
+  * src/wxbase/baseclasses/wx_object.cpp
+  * src/wxbase/baseclasses/wx_window.cpp
+  * src/wxbase/manwindows/wx_frame.cpp
+  * tests/test1/test1.prg
+    ; still optimizing and fixing mem bugs
+    ; work in progress
+
 2009-02-28 11:10 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
   * include/wxh.h
   * src/common/wx_harbour.cpp
